Working on small styling issues, with the header, blog, ect

--- a/src/css/components/header/header-bar.css
+++ b/src/css/components/header/header-bar.css
@@ -55,6 +55,10 @@
     text-transform: var(--HeaderBar-phone-text-text-transform, var(--HeaderBar-phone-text-transform));
 }
 
+.js-stickyHeaderBoundary {
+    height: 1px;
+}
+
 @media (--m-md) {
     .HeaderBar-inner {
         justify-content: var(--HeaderBar-justify);
